<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/appbar_padding"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout_editor_absoluteX="88dp">

            <ImageView
                android:id="@+id/bleImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:alpha="0.5"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_bluetooth_24px"
                android:contentDescription="@string/bluetooth_device_icon" />

            <ImageView
                android:id="@+id/bleConnectedImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:baselineAlignBottom="false"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_sync_alt_24px"
                android:contentDescription="@string/bluetooth_connection_icon" />

            <ImageView
                android:id="@+id/phoneImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_smartphone_24px"
                android:contentDescription="@string/phone_device_icon" />

            <ImageView
                android:id="@+id/wsConnectedImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:baselineAlignBottom="false"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_sync_alt_24px"
                android:contentDescription="@string/cloud_connection_icon" />

            <ImageView
                android:id="@+id/wsImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:alpha="0.5"
                app:srcCompat="@drawable/ic_cloud_queue_24px"
                android:contentDescription="@string/cloud_server_icon" />

        </LinearLayout>

        <fragment
            android:id="@+id/fragment"
            android:name="com.onyx.m2.relay.ui.main.SettingsFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_sync_24px" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>